# schema-registry-template

./: .gitignore  Makefile  README.md  buf.gen.yaml
.github/workflows/: go.yml  kotlin.yml  python.yml
go/: go.mod
go/cmd/go-events/: main.go
go/cmd/kotlin-events/: main.go
go/cmd/python-dto/: main.go
go/registry/v1/: build.go  envelope.pb.go  payload.go
go/user/v1/: envelope_build_test.go  user.pb.events.go  user.pb.go
kotlin/: .editorconfig  settings.gradle.kts
kotlin/apps/consumer/: build.gradle.kts
kotlin/apps/consumer/src/main/kotlin/com/github/cgund98/schemaregistry/app/consumer/: Consumer.kt
kotlin/apps/publisher/: build.gradle.kts
kotlin/apps/publisher/src/main/kotlin/com/github/cgund98/schemaregistry/app/publisher/: Publisher.kt
kotlin/gradle/: libs.versions.toml
kotlin/gradle-config/: detekt.yml
kotlin/lib/: build.gradle.kts
kotlin/lib/src/main/kotlin/com/github/cgund98/schemaregistry/: EnvelopeBuild.kt  SchemaRegistry.kt
kotlin/lib/src/test/kotlin/com/github/cgund98/schemaregistry/: EnvelopeBuildTest.kt  SchemaRegistryTest.kt
proto/registry/v1/: envelope.proto
proto/user/v1/: user.proto
python/: pyproject.toml
python/schema_registry/registry/v1/: __init__.py  envelope.py  envelope_pb2.py  envelope_pb2.pyi  event_type.py  message.py  payload.py
python/schema_registry/user/v1/: __init__.py  user_created.py  user_deleted.py  user_pb2.py  user_pb2.pyi  user_updated.py
python/tests/unit/registry/v1/: envelope_test.py  event_type_test.py
